# fastmin

./: README.md  pyproject.toml
fastmin/: exceptions.py  get_min.py
tests/: test_fastmin.py
