[tool.poetry]
name = "fastmin"
version = "0.1.0"
description = "This a Python package that find the minimum in array which has first few elements are strictly monotonically decreasing, the remaining elements are strictly monotonically increasing. "
authors = ["Sundara Nataraja <sundaranatarajaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
